--- a/Quenews.html
+++ b/Quenews.html
@@ -286,7 +286,7 @@
                     they open the app.</P>
                 </div>
                 <div class="expanded__media">
-                    <img src="./images/Quenews/0.png" width="70%" >
+                    <img src="./images/Quenews/Queue_Mockup.png" width="70%" >
                 </div>
             </div>
         </div>
