--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         </div>
                 <div class="expanded__media">
 <a href="Quenews.html">
-                    <img class="landing_img" src="./images/Quenews/0.png" width="60%" >
+                    <img class="landing_img" src="./images/Quenews/Queue_Mockup.png" width="60%" >
 </a>
                 </div>
             </div>
