--- a/IBM.html
+++ b/IBM.html
@@ -111,6 +111,10 @@
 
 			-webkit-transform: translateX(-50%) translateY(-50%) scale(1);
 		}
+		.text-container{
+			max-width: 800px;
+			width: 100%;
+		}
 
 
 
