--- a/Quenews.html
+++ b/Quenews.html
@@ -218,7 +218,7 @@
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030;  width: 110%">
                     <b style="color: #5654CD">Quenews</b> is a queue-based news app for commuters.</h1>
                 <p class="subtitle">Inspired by the pain points of commuters, my friend Erin and me designed Quenews together.<br>
-                My role: Solution, Information Architecture, UI design, prototyping.</P>
+                My role: Solution, Information Architecture, UI design, Prototyping.</P>
                 <img src="images/Quenews/Logo.png" width="20%">
 
 
@@ -254,17 +254,23 @@
 </div>
 
 
-<div class="landing_middle">
-        <h1 class="middle_title">Problems</h1>
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+            <div class="expanded__content" style="width: 50%">
+        <h1 class="middle_title">Problems & Insights</h1>
     <h3>Commuters love listening to the news.</h3>
-        <h4 ><i>"I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
+        <p ><i>"I don't wanna waste commuting time. Listening to news makes me feel like learning something."<br><br>
+            "I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
             "I wanna send emails or browse social media while listening to the news.
-            <br>It's inconvenient to switch
-            between the news app and other apps. "<br><br>
+            It's inconvenient to switch between the news app and other apps. "<br><br>
         "There's no WiFi when commuting."<br><br>
         "I wanted to know different media's perspectives about a piece of news."<br><br>
-            "I only listen to sports news."</i></h4>
+            "I only listen to sports news."</i></p>
+            </div>
 
+            <img class="img" src="images/Quenews/Insight%20Copy.png" style="width: 50%; margin-left: 5%">
+        </div></div>
 </div>
 
 <div class="expanded landing__section" style="background-color: #ffffff; ">
@@ -410,7 +416,7 @@
 
 <div class="landing_middle" style="background-color: white">
     <h1 class="middle_title">Wanna learn more about our design process?</h1>
-    <a target="_blank" class="resume button button__primary" style="letter-spacing: 1px">Learn more</a><br>
+    <a href="QuenewsDetail.html"  class="resume button button__primary" style="letter-spacing: 1px">Learn more</a><br>
 
 
 </div>
