--- a/QuenewsDetail.html
+++ b/QuenewsDetail.html
@@ -176,9 +176,10 @@
 
 						<a href="Quenews.html"  style="color: #5654CD" class="title"><h1>< Quenews</a> is a queue-based news app
 						for commuters.</h1>
-
-						<P>Product Design / Group Project (group of 2) <br> My Role: Solution, Information Architecture, UI Design, Prototyping</P>
 						<img class="img" src="images/Quenews/Logo.png" style="width: 20%; margin-left: 0%; margin-top: 40px">
+
+
+						<P style="margin-top: 80px">Product Design / Group Project (group of 2) <br> My Role: Solution, Information Architecture, UI Design, Prototyping</P>
 
 
 						<h1 id="2" style="margin-top: 80px">Background</h1>
@@ -217,7 +218,7 @@
 
 						<h1 id="4" style="margin-top: 80px">App Design</h1>
 						<h3>Information Architecture</h3>
-						<img class="img" src="images/Quenews/InfoArch.png" >
+						<img class="img" src="images/Quenews/InfoArch.png" style="width: 60%; margin-left: 20%" >
 						<h3>User Flow</h3>
 						<img class="img" src="images/Quenews/WorkFlow.png" style="margin-left: 25%">
 						<h3>Wireframe</h3>
