--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                 <div class="expanded__content">
                     <h1 class="expanded__title" >Quenews</h1>
-                    <P class="subtitle">Group Project (2 people), 2019 - Still under developing :)</P>
+                    <P class="subtitle">Group Project (2 people), 2019</P>
                     <p class="expanded__text">A queue-based news app for commuting people.
                         </div>
                 <div class="expanded__media">
