--- a/Quenews.html
+++ b/Quenews.html
@@ -390,7 +390,7 @@
         </div>
     </div>
 </div>
-<div class="expanded landing__section">
+<div class="expanded landing__section" style="background-color: #f7f7f7">
     <div class="container">
         <div class="expanded__inner">
 
@@ -410,12 +410,35 @@
         </div>
     </div>
 </div>
+<div class="expanded landing__section" style="background-color: white">
+    <div class="container">
+        <div class="expanded__inner">
+
+            <div class="expanded__content">
+                <h1 class="expanded__title" >Iteration</h1>
+
+                <h3 >Dark mode & Bright mode</h3>
+                <p>
+                    At first, we wanted to design the app based on dark mode, since it's a trend in product design. However,
+                    considering the app is designed for commuters and usually the environment brightness is enough during commuting time (8-10am and 4-6pm),
+                    we discarded the dark mode.
+                </p>
+                <h3>Fonts</h3>
+                <P>Serif could create a sense of news, but sans-serif is clearer and more popular. Therefore, we only used serif on titles.</P>
+            </div>
+            <div class="expanded__media">
+                <img class="img" src="./images/Quenews/Darkmode.png" width="40%" style="box-shadow: 0px 0px 20px #c0c0c0;margin-left: -5%" >
+                <img class="img" src="./images/Quenews/Discover_Card.png" width="40%" style="box-shadow: 0px 0px 20px #c0c0c0;margin-left: 5%" >
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
 
-<div class="landing_middle" style="background-color: white">
+<div class="landing_middle" style="background-color: #f7f7f7">
     <h1 class="middle_title">Wanna learn more about our design process?</h1>
     <a href="QuenewsDetail.html"  class="resume button button__primary" style="letter-spacing: 1px">Learn more</a><br>
 
