--- a/QuenewsDetail.html
+++ b/QuenewsDetail.html
@@ -147,6 +147,7 @@
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="#">Top</a></li>
+						<li><a href="Quenews.html">Back</a></li>
 						<li><a href="index.html">Home</a></li>
 
 					</ul>
@@ -176,10 +177,10 @@
 
 						<a href="Quenews.html"  style="color: #5654CD" class="title"><h1>< Quenews</a> is a queue-based news app
 						for commuters.</h1>
-						<img class="img" src="images/Quenews/Logo.png" style="width: 20%; margin-left: 0%; margin-top: 40px">
 
 
-						<P style="margin-top: 80px">Product Design / Group Project (group of 2) <br> My Role: Solution, Information Architecture, UI Design, Prototyping</P>
+						<P style="margin-top: 0px">Product Design / Group Project (group of 2) <br> My Role: Solution, Information Architecture, UI Design, Prototyping</P>
+						<img class="img" src="images/Quenews/Logo.png" style="width: 20%; margin-left: 0%; margin-top: 0px">
 
 
 						<h1 id="2" style="margin-top: 80px">Background</h1>
