--- a/Quenews.html
+++ b/Quenews.html
@@ -219,7 +219,7 @@
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030;  width: 110%">
                     <b style="color: #5654CD">Quenews</b> is a queue-based news app for commuters.</h1>
                 <p class="subtitle">Inspired by the pain points of commuters, my friend Erin and me designed Quenews together.<br>
-                My role: Solution, Information Architecture, UI design, Prototyping.</P>
+                My role: Solution, Information Architecture, Work Flow, UI design, Prototyping.</P>
                 <img src="images/Quenews/Logo.png" width="20%">
 
 
