--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="expanded__content">
                     <h1 class="expanded__title" >Quenews</h1>
                     <P class="subtitle">Group Project (2 people), 2019</P>
-                    <p class="expanded__text">A queue-based news app for commuting people.
+                    <p class="expanded__text">A queue-based news app for commuters.
                         </div>
                 <div class="expanded__media">
 <a href="Quenews.html">
