--- a/Quenews.html
+++ b/Quenews.html
@@ -258,8 +258,8 @@
 <div class="expanded landing__section">
     <div class="container">
         <div class="expanded__inner">
-            <div class="expanded__content" style="width: 50%">
-        <h1 class="middle_title">Problems & Insights</h1>
+            <div class="expanded__content" style="width: 40%">
+        <h1 class="middle_title" style="width: 200%">Problems & Insights</h1>
     <h3>Commuters love listening to the news.</h3>
         <p ><i>"I don't wanna waste commuting time. Listening to news makes me feel like learning something."<br><br>
             "I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
@@ -270,7 +270,7 @@
             "I only listen to sports news."</i></p>
             </div>
 
-            <img class="img" src="images/Quenews/Insight%20Copy.png" style="width: 50%; margin-left: 5%">
+            <img class="img" src="images/Quenews/Insight.png" style="width: 60%; margin-left: 5%; margin-top: 80px">
         </div></div>
 </div>
 
@@ -279,7 +279,7 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title" >Solutions</h1>
+                    <h1 class="expanded__title"  >Solutions</h1>
 
                     <h3 >Queue</h3>
                     <p>Commuters can easily add a piece of news to their queue.
@@ -288,7 +288,7 @@
                         <h3>Recommendation</h3>
                     <P>The recommendation algorithm is also based on the queue. Commuters can add a new piece of news to their queues according to their listening history.
                      Also, if the current queue is finished, the system will automatically choose a piece of news to play.</P>
-                    <h3>A never-ending listening experience</h3>
+                    <h3 >A never-ending listening experience</h3>
                     <P>Quenews can provide a never-ending listening experience to its users - they can enjoy the news the like whenever
                     they open the app.</P>
                 </div>
@@ -318,6 +318,7 @@
             </div>
             <div class="expanded__media">
                 <img src="./images/Quenews/Discover_Mockup.png" width="70%" >
+
             </div>
         </div>
     </div>
