--- a/IBM.html
+++ b/IBM.html
@@ -93,7 +93,7 @@
 			text-align: center;
 			visibility: hidden;
 			opacity: 0;
-			background-color: rgba(30,30,30,0.8);
+			background-color: rgba(255, 255, 255, 0.95);
 			-webkit-transition: all 0.3s;
 			-webkit-transform: translateX(-50%) translateY(-50%) scale(0.6);
 		}
