--- a/Product Spec - Speaker Profile Page.html
+++ b/Product Spec - Speaker Profile Page.html
@@ -5,6 +5,20 @@
 	<title>William Jin | Design Everything</title>
 	<link rel='stylesheet' href='css/style.min.css' />
 	<style>
+		.alink{
+
+			text-decoration: underline;
+			transition: .3s;
+
+
+		}
+		.alink:hover{
+			background-color:rgba(108, 99, 255, 0.3);
+
+		}
+		.alink:active{
+			background-color:rgba(108, 99, 255, 1);
+		}
 		.shadow{
 
 			transition: all .3s;
@@ -84,7 +98,7 @@
 	</style>
 </head>
 
-<body style="font-family: 'Roboto', sans-serif;background-color: #f5f6f7">
+<body style="font-family: 'Roboto', sans-serif; background-color: #f5f6f7">
 	<!-- navbar -->
 	<div class="navbar">
 		<nav class="nav__mobile"></nav>
@@ -109,9 +123,9 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="Product%20Spec%20-%20Speaker%20Profile%20Page.html" >Product Spec</a></li>
+						<li><a href="Product%20Spec%20-%20Speaker%20Profile%20Page.html" class="vMenu--active" >Product Spec</a></li>
 
-						<li><a href="#" class="vMenu--active" >Customized Design</a></li>
+						<li><a href="CustomizedDesign.html"  >Customized Design</a></li>
 						<li><a href="DesignTrend.html" >Design Trends</a></li>
 
 
@@ -122,57 +136,14 @@
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h1 class="app__main__title">Customized Design</h1>
-						<h3 >Definition</h3>
-						<P>Different users have different preferences. Besides, the concept of modular programming is widely applied in industry.
-							Here comes Customized Design - modularize different functions and let users to decide what they need.
-						</P>
-						<h3>Principles</h3>
-						<P>There are 3 principles of Customized Design.</P>
-						<p><b>1. More options, including turning-on, turning-off, and setting different strength levels.</b><br><br>
-							As the name suggests, Customized Design makes it possible for users to set up their options. Thus, the product has to provide different options to its users, such as activating a function, disabling a function, and choosing a strength level according to their preferences.
-						</P>
-						<img src="images/Design%20Philosophy/1.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
-						<P align="center" style="color: #909090; margin-top: 5px">Soooo many features on Wechat!</P>
-						<img src="images/Design%20Philosophy/2.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
-						<P align="center" style="color: #909090; margin-top: 5px">Also, a classic design of viewable Moments from Wechat.</P>
-						<img src="images/Design%20Philosophy/3.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
-						<P align="center" style="color: #909090; margin-top: 5px">Facebook is also doing this - users can provide feedback of a shortcut, though they can't turn it of.</P>
-						<b><P><i>Updated Oct 22, 2019: <br>
-							We can already remove a shortcut we don't like!</i></P></b>
-						<img src="images/Design%20Philosophy/6.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
+						<h1 class="app__main__title">Product Spec</h1>
+						<P><a target="_blank" href="https://docs.google.com/document/d/1egWeifQUf6c0VMsOTw1pOveqsgDUcVQYMAIjLodlZI8/edit?usp=sharing" class="alink">Here</a>
 
 
-
-
-						<p><b>2. An appropriate preset.</b><br><br>
-							Not all of the users want to customize their softwares. For those "lazy" or "light" users who do not want to choose from different options, the product has to provide them with an appropriate preset.
-
-
-						</P>
-						<img src="images/Design%20Philosophy/4.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
-						<P align="center" style="color: #909090; margin-top: 5px">The 6 shortcuts on Facebook.</P>
-
-
-						<P><B>3. A hidden portal.</B><br><br>
-							The various options has to be hidden, in order to reduce the complexity of interfaces and to avoid the redundancy of functions.For example, Facebook asks "is this shortcut relevant to you?" only when users long-press a tab, which isn't a common behavior. Most of the apps use a Settings tab to show (or hide) all the options.
-						</P>
-						<img src="images/Design%20Philosophy/5.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
-						<P align="center" style="color: #909090; margin-top: 5px">A good way is to integrate all the options into Settings tab!</P>
-
-
-						<h3>Benefits</h3>
-						<P>Also, there are 3 benefits of using Customized Design.</P>
-						<P><B>1. Meeting the demand of different users. </B><br><br>
-							Obviously, users customize their apps according to their own preferences.
-						</P>
-						<P><B>2. Making the product more attracting. </B><br><br>
-							Users will spend time and effort when customizing their own Apps. Therefore, they tend to continue using the App because their brains want to prove that their efforts are meaningful (a psychological phenomenon). Finally, a positive cycle can be formed and users will spend more time on the product.
-						</P>
-						<P><B>3. Facilitating the data analysis process. </B><br><br>
-							While users are customizing the product, their data and preferences can be easily collected and analyzed.
-						</P>
-
+							is a product spec I created for the speaker profile page of an online conferencing product.</P>
+						<h3>Detailed UX</h3>
+						<P><a target="_blank" href="https://www.figma.com/file/O3cbOFRskJFtW8DwF6b1F1/code?node-id=0%3A1" class="alink">Here</a>
+							is the UX design for customizing the invitation link.</P>
 
 					</div>
 				</div>
