--- a/DesignProcess.html
+++ b/DesignProcess.html
@@ -70,13 +70,13 @@
 		}
 
 		.landing__section:nth-child(odd) {
-			background-color: #f7f7f7;
+			background-color: #f5f6f7;
 			border-top: 0px solid #eee;
 			border-bottom: 0px solid #eee
 
 		}
 		.landing__section{
-			background-color: #f7f7f7;
+			background-color: #f5f6f7;
 		}
 
 
@@ -84,7 +84,7 @@
 	</style>
 </head>
 
-<body style="font-family: 'Roboto', sans-serif;">
+<body style="font-family: 'Roboto', sans-serif;background-color: #f5f6f7">
 	<!-- navbar -->
 	<div class="navbar">
 		<nav class="nav__mobile"></nav>
@@ -109,10 +109,14 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
+
+						<li><a href="Product%20Spec%20-%20Speaker%20Profile%20Page.html" >Product Spec</a></li>
+
 						<li><a href="CustomizedDesign.html" >Customized Design</a></li>
 						<li><a href="DesignTrend.html" >Design Trends</a></li>
 						<li><a href="DesignThinking.html" >Design Thinking</a></li>
 						<li><a href="#" class="vMenu--active"  >Design Process</a></li>
+
 
 					</ul>
 				</div>
