--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         }
 
         .landing__section:nth-child(odd) {
-            background-color: #f7f7f7;
+            background-color: #f5f6f7;
             border-top: 0px solid #eee;
             border-bottom: 0px solid #eee
 
@@ -169,7 +169,7 @@
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030; letter-spacing: .5px">
                     <b>Hi, I'm William.</b> I design (almost) everything.</h1>
                 <p style="font-size: 20px; font-weight: lighter; ">I'm passionate about creating great products by combining ux, business and technology.
-                    You can view my <a href="CustomizedDesign.html" class="alink"><b>Design Philosophy</b></a>,
+                    You can view my <a href="Product%20Spec%20-%20Speaker%20Profile%20Page.html" class="alink"><b>Playground</b></a>,
                     find me on <a href="https://www.linkedin.com/in/qiu-william-jin-405929168/" target="_blank" class="alink"><b>Linkedin</b></a>,
                     or
                     just send me an <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink" ><b>Email</b></a>.</p>
