--- a/index.html
+++ b/index.html
@@ -161,12 +161,13 @@
         </div>
     </div>
 </div>
-<div style="background-color: #6c63ff; height: 70px"></div>
-<div class="expanded landing__section" style="background-color: #fff">
+<div style="background-color: #6c63ff; height: 20px"></div>
+<div class="expanded landing__section" style="background-color: #f4f4f7">
     <div class="container">
         <div class="expanded__inner">
             <div class="expanded__content">
-                <h1 style="margin-top: 100px; font-size: 50px;   color: #303030; letter-spacing: .5px">
+                <P class="subtitle" style="margin-top: 100px">William Jin | Product Innovator</P>
+                <h1 style="font-size: 50px;   color: #303030; letter-spacing: 1px">
                     <b>Hi, I'm William.</b> I design (almost) everything.</h1>
                 <p style="font-size: 20px; font-weight: lighter; ">I'm passionate about creating great products by combining ux, business and technology.
                     You can view my <a href="Product%20Spec%20-%20Speaker%20Profile%20Page.html" class="alink"><b>Playground</b></a>,
