--- a/Quenews.html
+++ b/Quenews.html
@@ -428,6 +428,9 @@
                 </p>
                 <h3>Fonts</h3>
                 <P>Serif could create a sense of news, but sans-serif is clearer and more popular. Therefore, we only used serif on titles.</P>
+                <h3>Reflection</h3>
+                <P>Built on its core feature - the queue, Quenews is the project that I'm most proud of, since it solved a
+                real problem in an innovative and elegant way - that's what design should be.</P>
             </div>
             <div class="expanded__media">
                 <img class="img" src="./images/Quenews/Darkmode.png" width="40%" style="box-shadow: 0px 0px 20px #c0c0c0;margin-left: -5%" >
