--- a/Product Spec - Speaker Profile Page.html
+++ b/Product Spec - Speaker Profile Page.html
@@ -123,9 +123,10 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
+						<li><a href="CustomizedDesign.html"  >Customized Design</a></li>
+
 						<li><a href="Product%20Spec%20-%20Speaker%20Profile%20Page.html" class="vMenu--active" >Product Spec</a></li>
 
-						<li><a href="CustomizedDesign.html"  >Customized Design</a></li>
 						<li><a href="DesignTrend.html" >Design Trends</a></li>
 
 
@@ -141,9 +142,10 @@
 
 
 							is a product spec I created for the speaker profile page of an online conferencing product.</P>
-						<h3>Detailed UX</h3>
+						<h3 >Detailed UX</h3>
 						<P><a target="_blank" href="https://www.figma.com/file/O3cbOFRskJFtW8DwF6b1F1/code?node-id=0%3A1" class="alink">Here</a>
 							is the UX design for customizing the invitation link.</P>
+						<P style="margin-top: 100px"></P>
 
 					</div>
 				</div>
