--- a/Quenews.html
+++ b/Quenews.html
@@ -220,7 +220,7 @@
             <div class="expanded__content" style="width: 60%">
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030;  width: 110%">
                     <b style="color: #5654CD">Quenews</b> is a queue-based news app for commuters.</h1>
-                <p class="subtitle">Inspired by the pain points of commuters, my friend Erin and me designed Quenews together.<br>
+                <p class="subtitle">Inspired by the pain points of commuters, my friend Erin and I designed Quenews together.<br>
                 My role: Solution, Information Architecture, Work Flow, UI design, Prototyping.</P>
                 <img src="images/Quenews/Logo.png" width="20%">
 
@@ -262,17 +262,39 @@
         <div class="expanded__inner">
             <div class="expanded__content" style="width: 40%">
         <h1 class="middle_title" style="width: 200%">Problems & Insights</h1>
-    <h3>Commuters love listening to the news.</h3>
         <p ><i>"I don't wanna waste commuting time. Listening to news makes me feel like learning something."<br><br>
             "I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
             "I wanna send emails or browse social media while listening to the news.
             It's inconvenient to switch between the news app and other apps. "<br><br>
         "There's no WiFi when commuting."<br><br>
         "I wanted to know different media's perspectives about a piece of news."<br><br>
-            "I only listen to sports news."</i></p>
+            "I only listen to sports news."<br><br>
+        "I want to talk about today's news with my collegues."</i></p>
+                <h3>Insight: Commuters love listening to the news, since they want to do something MEANINGFUL to avoid wasting their time.</h3>
+
             </div>
 
-            <img class="img" src="images/Quenews/Insight.png" style="width: 60%; margin-left: 5%; margin-top: 80px">
+            <img class="img" src="images/Quenews/Insight.png" style="width: 60%; margin-left: 5%; margin-top: 0px">
+        </div></div>
+</div>
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+            <div class="expanded__content" style="width: 50%">
+                <h1 class="middle_title" style="width: 200%">Solutions</h1>
+                <h3>Queue</h3>
+                <p >Commuters can add several pieces of news to the queue before going out, and then enjoy the journey!</p>
+                <h3>Gesture</h3>
+                <P>Commuters can use gestures to easily control the app.</P>
+                <h3>Reward System</h3>
+                <P>A reward system to help commuters feel fulfilling and listen to more news.</P>
+                <h3>Category & Recommendation</h3>
+                <P>Users can browse the news and get automatic recommendations by categories.</P>
+                <h3>Larger & Simpler View</h3>
+                <P>There should be a mode allowing users to easily browse the news.</P>
+            </div>
+
+            <img class="img" src="images/Quenews/Solutions.png" style="width: 60%; margin-left: 0%; margin-top: 0px">
         </div></div>
 </div>
 
@@ -281,12 +303,13 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title"  >Solutions</h1>
+                    <h1 class="expanded__title"  >Quenews</h1>
 
                     <h3 >Queue</h3>
                     <p>Commuters can easily add a piece of news to their queue.
                         In doing so, they don't have to frequently take out their cell phones or switch between apps, or to worry about WiFi. The
-                         only thing is to add several pieces of news to the queue, and then enjoy the journey!
+                         only thing is to add several pieces of news to the queue, and then enjoy the journey! Besides, they can see the total remaining time and plan
+                    accordingly basing on the commuting time.
                         <h3>Recommendation</h3>
                     <P>The recommendation algorithm is also based on the queue. Commuters can add a new piece of news to their queues according to their listening history.
                      Also, if the current queue is finished, the system will automatically choose a piece of news to play.</P>
