--- a/QuenewsDetail.html
+++ b/QuenewsDetail.html
@@ -216,6 +216,10 @@
 						<P>The existing problems.</P>
 						<img class="img" src="images/Quenews/Insight.png">
 
+						<h1  style="margin-top: 80px">Solutions</h1>
+
+						<img class="img" src="images/Quenews/Solutions.png">
+
 
 						<h1 id="4" style="margin-top: 80px">App Design</h1>
 						<h3>Information Architecture</h3>
