--- a/Quenews.html
+++ b/Quenews.html
@@ -277,6 +277,21 @@
             <img class="img" src="images/Quenews/Insight.png" style="width: 60%; margin-left: 5%; margin-top: 0px">
         </div></div>
 </div>
+
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+            <div class="expanded__content" style="width: 40%">
+                <h1 class="middle_title" style="width: 200%">User Journey: <br>Before</h1>
+                <h3>Janice: A student living in New York</h3>
+                <p >Janice is a student in New York. Traveling 5 miles to school is her daily routine. She has to walk for a while, and then take the bus, and the subway. It takes her abour
+                    an hour to commute and she just doesn't want to waste two hours in her everyday life.</P>
+            </div>
+
+            <img class="img" src="images/Quenews/JourneyMap-Before.jpg" style="width: 60%; margin-left: 5%; margin-top: 0px">
+        </div></div>
+</div>
+
 <div class="expanded landing__section">
     <div class="container">
         <div class="expanded__inner">
@@ -294,9 +309,33 @@
                 <P>There should be a mode allowing users to easily browse the news.</P>
             </div>
 
-            <img class="img" src="images/Quenews/Solutions.png" style="width: 60%; margin-left: 0%; margin-top: 0px">
+            <img class="img" src="images/Quenews/Solutions.jpg" style="width: 60%; margin-left: 0%; margin-top: 0px">
         </div></div>
 </div>
+
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+            <div  style="width: 100%">
+                <h1 class="middle_title" style="">User Journey: After</h1>
+
+                <img class="img" src="images/Quenews/JourneyMap-After.jpg" style="width: 100%; margin-left: 0%; margin-top: 0px">
+
+            </div></div>
+    </div></div>
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+            <div class="expanded__content" style="width: 100%">
+                <h1 class="middle_title" style="">Before vs. After</h1>
+                <p >Janice's commuting will be easier and more fulfilling with all of the solutions.</p>
+                <img class="img" src="images/Quenews/BeforevsAfter.jpg" style="width: 80%; margin-left: 10%">
+            </div>
+        </div></div>
+</div>
+
+
+
 
 <div class="expanded landing__section" style="background-color: #ffffff; ">
         <div class="container">
