--- a/IBM.html
+++ b/IBM.html
@@ -175,24 +175,26 @@
 						Manage the Data Set;<br>
 						Check Data Quality.<br><br>
 						Since they are not closely related, I decided to put them in a hamburger navigation as three major tabs in Data Asset Management.</P>
+						<img class="img" src="images/IBM/EDPA_New/InfoArch.jpg" style=" margin-top: 10px ">
+
 
 						<h4>Asset Index</h4>
 						<P>The tree view clearly shows the hierarchy of categories and terms, allowing users to find a category/term manually. There's also a global search bar
 							to help them search by keywords or status. Because of the limited space, I designed a navigation drawer (Event tab) to show
 							notifications when the data updates.</P>
 
-						<img class="img" src="images/IBM/EDPA_New/1.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img class="img" src="images/IBM/EDPA_New/AssetIndex.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 
 						<h4>Data Set Management</h4>
 						<P>It took me a while to persuade engineers in my team to implement the Card Based Design, by Competitor Analysis and A/B Testing. From my opinion, when there's only a
 						few of the elements and we don't have to sort them, Cards are better than tables.</P>
 
-						<img class="img" src="images/IBM/EDPA_New/2.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img class="img" src="images/IBM/EDPA_New/Dataset.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<P>Turning on / off the automatic update is important. Therefore, the according button was
 							designed blue and other buttons are icons from IBM design language and are greyscale.</P>
-						<img class="img" src="images/IBM/EDPA_New/3.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img class="img" src="images/IBM/EDPA_New/4.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img  src="images/IBM/5.png" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img class="img" src="images/IBM/EDPA_New/HDFS.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img class="img" src="images/IBM/EDPA_New/Term.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img  src="images/IBM/5.png" style="  margin-top: 10px ">
 
 						<h4>What did I learn from that week?</h4>
 						<P>- Only when we understand the technical and business part of the product can we use design to drive it. <br>
