--- a/IBM.html
+++ b/IBM.html
@@ -194,6 +194,7 @@
 							designed blue and other buttons are icons from IBM design language and are greyscale.</P>
 						<img class="img" src="images/IBM/EDPA_New/HDFS.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img class="img" src="images/IBM/EDPA_New/Term.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img class="img" src="images/IBM/EDPA_New/Sample%20Data.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img  src="images/IBM/5.png" style="  margin-top: 10px ">
 
 						<h4>What did I learn from that week?</h4>
