--- a/IBM.html
+++ b/IBM.html
@@ -169,12 +169,22 @@
 						<P>My knowledge in SQL and statistics made it easier to understand this product. However, I still had to learn a lot.</P>
 						<img src="images/IBM/EDPA_New/5.png" style="width: 60%; margin-left: 20%">
 						<P>The most important 3 concepts in EDPA are category, term and data set. A category contains 0 or more terms, which can also be grouped by data sets.</P>
+
+						<h4>Users</h4>
+						<P>Non-technical and technical employees need to work on EDPA together, although they have different needs and goals.</P>
+						<img class="img" src="images/IBM/EDPA_New/Persona-Jack.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img class="img" src="images/IBM/EDPA_New/Persona-Charles.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+
+						<h4>Insight</h4>
+						<P>EDPA is a data asset platform allowing non-technical and technical employees to collaborate together on big data in a digital era. </P>
+
 						<h4>Information Architecture</h4>
-						<P>My design focused on the Data Asset Management tab. The 3 major needs for users are:
-						<br>Check and manipulate the Asset Index;<br>
-						Manage the Data Set;<br>
-						Check Data Quality.<br><br>
-						Since they are not closely related, I decided to put them in a hamburger navigation as three major tabs in Data Asset Management.</P>
+						<P>My design focused on the Data Asset Management feature. The 3 major needs for users are:
+						<br>Check and manipulate the Asset Index (non-technical);<br>
+						Manage the Data Set (technical);<br>
+						Check Data Quality (both).<br><br>
+						Since they are not closely related, I decided to put them in a hamburger navigation as three major tabs in Data Asset Management.
+						When Charles is managing the dataset, he can also manage the data in the category-term hierarchy. However, it's rarer for Jack to use the dataset-term hierarchy.</P>
 						<img class="img" src="images/IBM/EDPA_New/InfoArch.jpg" style=" margin-top: 10px ">
 
 
