--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <P class="subtitle" style="color: rgba(255,255,255,.5);">Feb - Jun 2019</P>
                     <p class="expanded__text" style="color: #ffffff;">Several projects during my internship in IBM.</div>
                 <div class="expanded__media">
-                    <a href="IBM.html">
+                    <a href="IBM2.html">
                     <img class = 'landing_img' src="./images/IBM/0.png" width="80%" style="margin-top: 150px; margin-bottom: 150px" >
                     </a>
                 </div>
