--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title">EZChat</h1>
-                    <P class="subtitle">Independent Project, 2018 - 2019</P>
-                    <p class="expanded__text">A relation-based chatting tool for People who value boundaries in their interpersonal relationships.</div>
+                    <h1 class="expanded__title">Campus+</h1>
+                    <P class="subtitle">Independent Project, 2020</P>
+                    <p class="expanded__text">A experience system helping students report and track facility and building issues.</div>
                 <div class="expanded__media">
-                    <a href="EZChat.html">
-                        <img class="landing_img" src="./images/EZChat/0.png" width="60%">
+                    <a href="Campus+.html">
+                        <img class="landing_img" src="./images/Campus+/HiFi/Facilities_MockUp.png" width="60%">
                     </a>
                 </div>
             </div>
